--- a/Favorite.html
+++ b/Favorite.html
@@ -23,7 +23,7 @@
         <div class="meal-wrapper">
             <div class="Favmeal-result">
                 <a href="index.html" class="button1">Go to Home</a>
-                <h2 class="title">Your Favorite Recepies:</h2>
+                <h2 class="title">Your Favorite Recipes:</h2>
 
                 <div id="Favmeal">
                     
