--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find your meal recepies here</title>
+    <title>Find your meal recipes here</title>
      <link rel="stylesheet" type="text/css" href="https://demo.plantpot.works/assets/css/normalize.css"> 
     <link rel="stylesheet" href="https://use.typekit.net/opg3wle.css">
     <link rel="stylesheet" href="style.css">
